--- a/inst/templates/svm-latex-cv/svm-latex-cv.rmd
+++ b/inst/templates/svm-latex-cv/svm-latex-cv.rmd
@@ -76,7 +76,7 @@ cv_data %>% CVR::print_text_block('skills')
 ```{r}
 cv_data %>% CVR::print_section('grant_project',
                            glue_template = "
-{timeline} *{institution}*: {title}. Amount: {loc}. {description_bullets} \n\n
+{timeline} *{institution}*: {title}. Amount: {loc}. \\begin{{itemize}} {description_bullets} \\end{{itemize}}
 ")
 ```
 
