remove description for education block

--- a/inst/templates/svm-latex-cv/svm-latex-cv.rmd
+++ b/inst/templates/svm-latex-cv/svm-latex-cv.rmd
@@ -37,7 +37,10 @@ cv_data %>% CVR::print_section('research_positions')
 
 ## Education
 ```{r}
-cv_data %>% CVR::print_section('education')
+cv_data %>% CVR::print_section('education',
+                               glue_template = "
+{timeline} \\hfill {institution} \\newline {title} \\hfill {loc} \\newline
+")
 ```
 
 ## Research Area
