--- a/inst/templates/svm-latex-cv/svm-latex-cv.rmd
+++ b/inst/templates/svm-latex-cv/svm-latex-cv.rmd
@@ -13,11 +13,11 @@ fontawesome: yes
 phone: 910 232-3760
 address: 578 John Kimbrough Blvd · 2260 TAMU · College Station, TX 77843
 updated: no
-bibliography_peer_review: peer_review.bib
-bibliography_tech_report: tech_report.bib
-bibliography_conference: conference.bib
-bibliography_software: software.bib
-bibliography_datasets: datasets.bib
+bibliography_peer_review: "`r paste0(output_dir,'/peer_review.bib')`"
+bibliography_tech_report: "`r paste0(output_dir, '/tech_report.bib')`"
+bibliography_conference: "`r paste0(output_dir,'/conference.bib')`"
+bibliography_software: "`r paste0(output_dir,'/software.bib')"
+bibliography_datasets: "`r paste0(output_dir,'/datasets.bib')"
 nocite: '@*'
 csl: "`r csl_loc`"
 ---
