--- a/inst/templates/svm-latex-cv/svm-latex-cv.rmd
+++ b/inst/templates/svm-latex-cv/svm-latex-cv.rmd
@@ -16,8 +16,8 @@ updated: no
 bibliography_peer_review: "`r paste0(output_dir,'/peer_review.bib')`"
 bibliography_tech_report: "`r paste0(output_dir, '/tech_report.bib')`"
 bibliography_conference: "`r paste0(output_dir,'/conference.bib')`"
-bibliography_software: "`r paste0(output_dir,'/software.bib')"
-bibliography_datasets: "`r paste0(output_dir,'/datasets.bib')"
+bibliography_software: "`r paste0(output_dir,'/software.bib')`"
+bibliography_datasets: "`r paste0(output_dir,'/datasets.bib')`"
 nocite: '@*'
 csl: "`r csl_loc`"
 ---
