rename package in templates

--- a/inst/templates/svm-latex-cv/svm-latex-cv.rmd
+++ b/inst/templates/svm-latex-cv/svm-latex-cv.rmd
@@ -32,7 +32,7 @@ knitr::opts_chunk$set(
 ## Research Experience
 
 ```{r}
-cv_data %>% CVR::print_section('research_positions',
+cv_data %>% mpsCVR::print_section('research_positions',
                                glue_template = "
 {timeline} \\hfill {institution} \\newline {title} \\hfill {loc} \\newline \\newline
 ")
@@ -40,7 +40,7 @@ cv_data %>% CVR::print_section('research_positions',
 
 ## Education
 ```{r}
-cv_data %>% CVR::print_section('education',
+cv_data %>% mpsCVR::print_section('education',
                                glue_template = "
 {timeline} \\hfill {institution} \\newline {title} \\hfill {loc} \\newline \\newline
 ")
@@ -48,12 +48,12 @@ cv_data %>% CVR::print_section('education',
 
 ## Research Area
 ```{r}
-cv_data %>% CVR::print_text_block('research')
+cv_data %>% mpsCVR::print_text_block('research')
 ```
 
 ## Skills
 ```{r}
-cv_data %>% CVR::print_text_block('skills')
+cv_data %>% mpsCVR::print_text_block('skills')
 ```
 
 ## Peer Reviewed Articles
@@ -81,7 +81,7 @@ cv_data %>% CVR::print_text_block('skills')
 
 ## Grants and Projects
 ```{r}
-cv_data %>% CVR::print_section('grant_project',
+cv_data %>% mpsCVR::print_section('grant_project',
                            glue_template = "
 {timeline} *{institution}*: {title}. Amount: {loc}. \\newline \\newline
 ")
@@ -90,7 +90,7 @@ cv_data %>% CVR::print_section('grant_project',
 ## Awards and Honors
 
 ```{r}
-cv_data %>% CVR::print_section('awards',
+cv_data %>% mpsCVR::print_section('awards',
                            glue_template = "
 {title} \n\n
 ")
@@ -100,7 +100,7 @@ cv_data %>% CVR::print_section('awards',
 
 ### Review committees
 ```{r}
-cv_data %>% CVR::print_section('committee',
+cv_data %>% mpsCVR::print_section('committee',
                            glue_template = "
 {timeline}: {title} \n
 # ")
@@ -108,7 +108,7 @@ cv_data %>% CVR::print_section('committee',
 
 ### Peer review
 ```{r}
-cv_data %>% CVR::print_section('j_peer_review',
+cv_data %>% mpsCVR::print_section('j_peer_review',
                            glue_template = "
 *{title}* \n
 ")
