--- a/inst/templates/svm-latex-cv/svm-latex-cv.tex
+++ b/inst/templates/svm-latex-cv/svm-latex-cv.tex
@@ -225,7 +225,7 @@ $endfor$
 % Use fontawesome. Note: you'll need TeXLive 2015. Update.
 $if(fontawesome)$
 \usepackage{fontawesome}
-%\newfontfamily{\FA}{fontawesome.otf}
+%\newfontfamily{\FA}[Path=fonts/]{fontawesome.ttf}
 $endif$
 
 % Fancyhdr, as I tend to do with these personal documents.
