--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![R build status](https://github.com/mps9506/CVR/workflows/R-CMD-check/badge.svg)](https://github.com/mps9506/CVR/actions)
+[![license](https://img.shields.io/badge/license-MIT + file LICENSE-lightgrey.svg)](https://choosealicense.com/)
 <!-- badges: end -->
 
 ## Installation
@@ -30,6 +31,10 @@ remotes::install_github("mps9506/CVR")
 ```
 ## About
 
-mpsCVR is a personal R package to automate generation of my CV and resume. CVR is based heavily on [datadrivencv](https://github.com/nstrayer/datadrivencv), [vitae](https://github.com/mitchelloharawild/vitae), and templates provide by [svm-r-markdown-templates](https://github.com/svmiller/svm-r-markdown-templates). There are no plans to release this package since it is heavily customized for my needs but does not provide any additional functionality to the above codebases.
+mpsCVR is a personal R package to automate generation of my CV and resume. CVR is based heavily on [datadrivencv](https://github.com/nstrayer/datadrivencv) and [vitae](https://github.com/mitchelloharawild/vitae). 
+
+The CV templates within the packages are provided by [svm-r-markdown-templates](https://github.com/svmiller/svm-r-markdown-templates), licensed under MIT and by [yaac-another-awesome-cv](https://github.com/darwiin/yaac-another-awesome-cv), licensed under The LaTeX Project Public License. There are no plans to release this package since it is heavily customized for my needs but does not provide any additional functionality to the above codebases.
 
 See [this repo](https://github.com/mps9506/CV-RMD) for a usage example.
+
+
