--- a/inst/templates/yaac/yaac.tex
+++ b/inst/templates/yaac/yaac.tex
@@ -10,7 +10,7 @@
 % Template license:
 % CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0/)
 
-\documentclass[localFont,alternative,compact]{yaac-another-awesome-cv}
+\documentclass[localFont,alternative,compact,showLinks]{yaac-another-awesome-cv}
 $if(csl-refs)$
 \newlength{\cslhangindent}
 \setlength{\cslhangindent}{1.5em}
